# PathMaker

./: Cargo.toml  LICENSE  README.md  test.json
.github/workflows/: build.yml  test.yml
src/: benchmarks.rs  colors.rs  components.rs  enemy.rs  fileDialog.rs  layout.rs  main.rs  pathfinding.rs  player.rs  settings.rs  util.rs
src/assets/open-sans/: .uuid
src/assets/test_file/: test.json
src/components/: board.rs  button.rs  displaybox.rs  file_explorer.rs  inputbox.rs  selectbox.rs  widget.rs
