[package]
name = "game_ex"
version = "0.1.0"
edition = "2021"
description = "PathMaker - Interactive Pathfinding Visualization"
license = "MIT"

[[bin]]
name = "pathmaker"
path = "src/main.rs"

[dependencies]
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = "0.9.2"
csv = "1.3"
cap = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
cap = "0.1"
sdl2 = { version = "0.38.0", features = ["ttf","image","static-link", "use-pkgconfig"]}

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = "0.5.4"
jemalloc-ctl = "0.5.4"
sdl2 = { version = "0.38.0", features = ["ttf","static-link","bundled", "use-pkgconfig"]}


[target.'cfg(target_os = "macos")'.dependencies]
jemallocator = "0.5.4"
jemalloc-ctl = "0.5.4"
sdl2 = { version = "0.38.0", features = ["ttf","static-link","bundled", "use-pkgconfig","use_mac_framework"]}