[package]
name = "game_ex"
version = "0.1.0"
edition = "2021"
description = "PathMaker - Interactive Pathfinding Visualization"
license = "MIT"

[[bin]]
name = "pathmaker"
path = "src/main.rs"

[features]
ci-static = ["sdl2/use-vcpkg", "sdl2/static-link"]

[dependencies]
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = "0.9.2"
csv = "1.3"
cap = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
cap = "0.1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = "0.5.4"
jemalloc-ctl = "0.5.4"

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-args=-mmacosx-version-min=15.0"]


[dependencies.sdl2]
version = "0.38"
default-features = false
features = ["ttf","image"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-ttf", "sdl2-image"]
git = "https://github.com/microsoft/vcpkg"
rev = "2025.12.12"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static" }
x86_64-unknown-linux-gnu = { triplet = "x64-linux" }
aarch64-apple-darwin = { triplet = "arm64-osx" }
